--- a/src/views/LoginView.mxml
+++ b/src/views/LoginView.mxml
@@ -21,6 +21,9 @@
 			import spark.events.ViewNavigatorEvent;
 			import spark.managers.PersistenceManager;
 			
+			[Embed (source="/assets/images/progressbar/pbGreenTest.png" )]
+			private var pb25:Class;
+			
 			//[Bindable]
 			private var _service:FlickrService; 
 			//private var _serviceAuthorization:ServiceAuthorization;
@@ -32,6 +35,8 @@
 			
 			private var _popup:MenuPopUp;
 			
+			
+			
 			/**
 			 * This starts the login sequence.  We need to set the secret
 			 * assigned to our particular application, and then get
@@ -40,6 +45,9 @@
 			
 			private function viewActivateHandler(event:ViewNavigatorEvent):void{
 				//_popup = new MenuPopUp();
+				
+				//test
+				pb.source = new pb25;
 				
 				_service = data as FlickrService;	
 				
@@ -172,13 +180,14 @@
 					text="This application requires that you authenticate on Flickr.com before proceeding. 
 					Please log in to Flickr in the separate browser window that opened.  
 					After you have successfully logged in and authorized the app, press 'OK' to continue"/>
-		<s:Button x="136" y="10" label="OK" click="onValidConnection()"/>
 	</s:HGroup>
 	<s:HGroup id="loginInfoTextDisplay">
 		<s:Label id="username"/>
 		<s:Label id="permission"/>
 	</s:HGroup>
-	<s:Image x="19" y="88" source="assets/images/bluebuttontest.png"/>
+	<s:Image x="10" y="115" source="assets/images/bluebuttontest.png"/>
 	<s:Image x="216" y="88" source="assets/images/greenbuttontest.png"/>
+	<s:Button x="414" y="113" label="OK" click="onValidConnection()"/>
+	<s:Image id="pb" x="60" y="78"/>
 	
 </s:View>
