Uploader: - Reads Exif from image to reorient. 2 libs added for this: jp.shichiseki.exif com.flashnroses.mobile.utils.hardware.ExifUtils -  Resizes image. code in IR.

--- a/src/FlickrClient.mxml
+++ b/src/FlickrClient.mxml
@@ -8,9 +8,9 @@
 	<fx:Script>
 		<![CDATA[
 			import com.adobe.webapis.flickr.FlickrService;
-			import com.squidzoo.android.eventSystem.EventCentral;
-			import com.squidzoo.android.eventSystem.events.CustomEvent;
-			import com.squidzoo.android.flickr.statics.Keys;
+			import com.squidzoo.eventSystem.EventCentral;
+			import com.squidzoo.eventSystem.events.CustomEvent;
+			import statics.Keys;
 			
 			import components.MenuPopUp;
 			
