Login logic works with states on one page. setting  <softKeyboardBehavior>pan</softKeyboardBehavior> in manifest enables stagewebview to keep its dimensions and avoid a premature kill of the app because of a flickr non-scrollable popup in m.flickr. skinning of buttons for login. fully functioning app from login to upload except change of privacy.

--- a/src/views/BatchUploadView.mxml
+++ b/src/views/BatchUploadView.mxml
@@ -103,6 +103,12 @@
 				}
 			}
 			
+			protected function onClickPrivacySettingsButton(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -122,9 +128,13 @@
 					  click="onClickPickPhotoButton(event)" 
 					  skinClass="components.PickaPhotoButtonSkin"/>
 			
-			<s:Button id="ChooseSetButton" 
+			<!--<s:Button id="ChooseSetButton" 
 					click="onChooseSet()"
-					skinClass="components.ChooseSetButtonSkin"/> 
+					skinClass="components.ChooseSetButtonSkin"/>-->
+			
+				<s:Button id="PrivacySettingsButton"
+						  click="onClickPrivacySettingsButton(event)"
+						  skinClass="components.PrivacySettingsButtonSkin"/>
 			
 			<s:Button click="onClickUploadListButton()" 
 					  skinClass="components.UploadButtonSkin"/>
